@@ -19,7 +19,6 @@ package net.croz.nrich.registry.data.util;
 
 import org.junit.jupiter.api.Test;
 
-import java.util.Collections;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -29,7 +28,7 @@ class ClassLoadingUtilTest {
     @Test
     void shouldLoadClass() {
         // given
-        List<String> classNameList = Collections.singletonList(String.class.getName());
+        List<String> classNameList = List.of(String.class.getName());
 
         // when
         Class<?> result = ClassLoadingUtil.loadClassFromList(classNameList);
@@ -41,7 +40,7 @@ class ClassLoadingUtilTest {
     @Test
     void shouldReturnNullForNonExistingClass() {
         // given
-        List<String> classNameList = Collections.singletonList("non.existing.Class");
+        List<String> classNameList = List.of("non.existing.Class");
 
         // when
         Class<?> result = ClassLoadingUtil.loadClassFromList(classNameList);
